--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 absl-py==0.2.2
 astor==0.6.2
 # Editable Git install with no remote (atari-py==0.2.0)
--e ./atari-py-0.2.0
+-e ./atari-py
 backcall==0.1.0
--e git+ssh://git@github.com/openai/baselines.git@a6b1bc70f156dc45c0da49be8e80941a88021700#egg=baselines
+-e ./baselines #a6b1bc70f156dc45c0da49be8e80941a88021700 (commit id)
 bleach==1.5.0
 certifi==2018.4.16
 cffi==1.11.5
@@ -37,7 +37,7 @@ jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
 Markdown==2.6.11
-MarkupSafe==1.0
+MarkupSafe==1.1.1
 matplotlib==2.2.2
 mistune==0.8.3
 moviepy==0.2.3.5
