--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 absl-py==0.2.2
 astor==0.6.2
-# Editable Git install with no remote (atari-py==0.2.0)
--e ./atari-py
+atari-py==0.2.0
 backcall==0.1.0
 -e ./baselines #a6b1bc70f156dc45c0da49be8e80941a88021700 (commit id)
 bleach==1.5.0
@@ -41,7 +40,7 @@ MarkupSafe==1.1.1
 matplotlib==2.2.2
 mistune==0.8.3
 moviepy==0.2.3.5
-mpi4py==3.0.0
+mpi4py==3.0.1
 mujoco-py==1.50.1.56
 nbconvert==5.3.1
 nbformat==4.4.0
